:bug: Too long character strings would remove images

--- a/styles/Room.module.css
+++ b/styles/Room.module.css
@@ -96,6 +96,17 @@
   flex-direction: column;
 }
 
+.elipspis {
+  text-overflow: ellipsis;
+
+  overflow: hidden;
+  display: -webkit-box;
+  /* max-width: calc(100% - 100px); */
+  /* width: calc(100% - 100px); */
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
 .text {
   margin: 0;
 }
